<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">可可电视</string>
    <string name="go">go</string>
    <string name="nulltime">--:--:--</string>
    <string name="loading_txt">正在加载中...</string>

    <string name="version_name">1.0</string>
    <string name="title_file">本地视频</string>
    <string name="title_online">在线视频</string>
    <string name="init_decoders">正在进行第一次解压解码包...</string>
    <string name="loadinfo">载入中，请稍后...</string>
    <string name="file_oper">文件操作</string>
    <string name="file_rename">重命名</string>
    <string name="file_rename_failed">重命名失败</string>
    <string name="file_rename_exists">文件已存在</string>
    <string name="file_delete">删除</string>
    <string name="file_delete_confirm">确定删除 (%s) ？</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="prompt">退出确认</string>
    <string name="quit_desc">确认退出程序？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="user_def">自定义视频</string>
    <string name="user_def_note">请输入网络MRL：\n如http://、mms://或rtsp://</string>
    <string name="user_def_hint">请输入网络地址...</string>
    <string name="user_def_open">打开</string>
    <string name="user_def_clear">清除</string>
    <string name="example1">例如：\n\nhttp://www.example.com/stream.avi</string>
    <string name="example2">mms://mms.examples.com/stream.asx</string>
    <string name="example3">rtsp://server.example.org:8080/test.sdp</string>
    <string name="appList_btn">应用推荐</string>
    <string name="search_txt">频道搜索</string>
    <string name="search_hint">请输入搜索的频道名称</string>
    <string name="radio_titlle">电台(Radio)"</string>

</resources>